--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.1.2",
     "bcryptjs": "^2.4.3",
     "crypto-browserify": "^3.12.0",
+    "images": "^3.2.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
